--- a/i3/config
+++ b/i3/config
@@ -7,37 +7,13 @@
 
 # i3 config file (v4)
 #
-# Please see http://i3wm.org/docs/userguide.html for a complete reference!
+# Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:System San Francisco Display 10
-
-
-
-
-# Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
-
-# Sreen brightness controls
-#bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-#bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
-
-# Touchpad controls
-bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
-
-# Media player controls
-bindsym XF86AudioPlay exec playerctl play
-bindsym XF86AudioPause exec playerctl pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
-
-
-
+font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -60,11 +36,16 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -width 30 -padding 100-opacity "99" -bw 1 -bc "#215951" -bg "#215951" -fg "#e0dce8" -hlbg "#215951" -hlfg "#9575cd" -font "System San Francisco Display 12"
+#bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec rofi -config $HOME/.config/i3/config.rasi -show run -lines 3 -width 20 -location 3 -font "pango:monospace 12" -xoffset 0 -yoffset 1000
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+
+bindsym $mod+Tab exec --no-startup-id rofi -config $HOME/.config/i3/config.rasi -auto-select -lines 3 -location 2 -width 40 -modi combi -combi-modi window -show combi
+
+
 
 # change focus
 bindsym $mod+j focus left
@@ -116,42 +97,29 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-
-# worspaces
-set $workspace1 "1 : Terminals"
-set $workspace2 "2 : Editors"
-set $workspace3 "3 : Ground_Control"
-set $workspace4 "4 : Files"
-set $workspace5 "5 :  Internet"
-set $workspace6 "6 : Scheduler"
-set $workspace7 "7 : "
-set $workspace8 "8 : "
-set $workspace9 "9 : "
-set $workspace10 "10 : "
-
 # switch to workspace
-bindsym $mod+1 workspace $workspace1
-bindsym $mod+2 workspace $workspace2 
-bindsym $mod+3 workspace $workspace3
-bindsym $mod+4 workspace $workspace4
-bindsym $mod+5 workspace $workspace5 
-bindsym $mod+6 workspace $workspace6
-bindsym $mod+7 workspace $workspace7
-bindsym $mod+8 workspace $workspace8
-bindsym $mod+9 workspace $workspace9
-bindsym $mod+0 workspace $workspace10
+bindsym $mod+1 workspace 1
+bindsym $mod+2 workspace 2
+bindsym $mod+3 workspace 3
+bindsym $mod+4 workspace 4
+bindsym $mod+5 workspace 5
+bindsym $mod+6 workspace 6
+bindsym $mod+7 workspace 7
+bindsym $mod+8 workspace 8
+bindsym $mod+9 workspace 9
+bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $workspace1
-bindsym $mod+Shift+2 move container to workspace $workspace2
-bindsym $mod+Shift+3 move container to workspace $workspace3
-bindsym $mod+Shift+4 move container to workspace $workspace4
-bindsym $mod+Shift+5 move container to workspace $workspace5
-bindsym $mod+Shift+6 move container to workspace $workspace6
-bindsym $mod+Shift+7 move container to workspace $workspace7
-bindsym $mod+Shift+8 move container to workspace $workspace8
-bindsym $mod+Shift+9 move container to workspace $workspace9
-bindsym $mod+Shift+0 move container to workspace $workspace10
+bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+4 move container to workspace 4
+bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+0 move container to workspace 10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -186,26 +154,50 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+set $bg-color 		 #2f343fcc
+set $inactive-bg-color   #2f343f
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #E53935
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command  i3blocks -c ~/.config/i3/i3blocks.conf
-        tray_output primary
-colors {
-		background #143028
-	    	separator #c5d6d1
-		#                  border             background         text
-		focused_workspace  #143028            #215951         #c5d6d1
-		inactive_workspace #143028            #143028         #c5d6d1
-		urgent_workspace   #143028             #e21f1f   #c5d6d1
+    id bottom
+    position bottom
+    status_command ~/.local/bin/bumblebee-status \
+        -m pasource pasink cpu2 nvidiagpu memory disk:root datetime battery \
+        -p root.path=$HOME datetime.format="%a, %b %d | %I:%M:%S %p"  \
+           cpu2.layout="cpu2.cpuload cpu2.coresload" nvidiagpu.format="GPU: {temp}°C, {mem_used} MiB" \
+           memory.format="{used} ({percent:04.02f}%)" disk.format="{used} ({percent:04.02f}%)" \
+        -t iceberg-dark-powerline
+	colors {
+		background $bg-color
+		separator #757575
+		focused_workspace $bg-color $bg-color $text-color
+		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+		urgent_workspace $urgent-bg-color $urgent-bg-color $text-color
 	}
 }
+exec_always feh --bg-scale $HOME/Downloads/img.jpg
+bindsym $mod+shift+x exec i3lock-fancy -p -g #-i $HOME/Downloads/a.png
+bindsym Print --release exec "scrot -s /tmp/screenshot-$(date +%F_%T).png -e 'xclip -selection c -t image/png < $f'"
+exec --no-startup-id nm-applet
+exec_always guake &
 
-#lock
-bindsym $mod+shift+x exec i3lock
+popup_during_fullscreen leave_fullscreen
+for_window [class="^.*"] border pixel 1
 
-#wall
-exec_always feh --bg-scale /home/gajen/Pictures/a.png
-#compton
+bindsym XF86AudioRaiseVolume exec --no-startup-id "pactl set-sink-volume $(pactl list short | grep RUNNING | sed -e 's,^\([0-9][0-9]*\)[^0-9].*,\1,') +5%"
+bindsym XF86AudioLowerVolume exec --no-startup-id "pactl set-sink-volume $(pactl list short | grep RUNNING | sed -e 's,^\([0-9][0-9]*\)[^0-9].*,\1,') -5%"
+bindsym XF86AudioMute exec --no-startup-id "pactl set-sink-mute $(pactl list short | grep RUNNING | sed -e 's,^\([0-9][0-9]*\)[^0-9].*,\1,') toggle"
 
-exec_always compton -f
+bindsym XF86MonBrightnessDown exec --no-startup-id "brightnessctl s 10%-"
+bindsym XF86MonBrightnessUp exec --no-startup-id "brightnessctl s 10%+"
+
+bindsym XF86AudioPlay exec --no-startup-id omnipause toggle &&  sleep 1 && notify-send --icon=gtk-info AudioPlayer "$(omnipause status)"
+bindsym XF86AudioNext exec --no-startup-id omnipause next &&  sleep 3 && notify-send --icon=gtk-info AudioPlayer "$(omnipause status)"
+bindsym XF86AudioPrev exec --no-startup-id omnipause previous &&  sleep 3 && notify-send --icon=gtk-info AudioPlayer "$(omnipause status)"
+bindsym $mod+m exec --no-startup-id notify-send --icon=gtk-info AudioPlayer "$(omnipause status)"
+
+gaps inner 5
+smart_borders on
